# ml_testing

./: .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: .github-actions.yaml
notebook/: eda.ipynb
src/configs/: config.py  config.yaml
src/dataloader/: preprocess.py
src/model/: train.py
tests/unit/test_configs/: test_config.py
tests/unit/test_dataloader/: test_preprocess.py
